--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,46 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+ @media screen and (max-width: 768px) {
+    .container{
+        max-width: 90%;
+        margin: auto;
+        padding: 0px 20px;
+    }
+ }
+
+
+ @media screen and (max-width: 480px) {
+    .container{
+        max-width: 90%;
+        margin: auto;
+        padding: 0px 20px;
+    }
+
+   
+
+    .row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+
+    .lessons  .col, .steps .col, .why-us .col   {
+        width: 100%;
+        justify-content: center;
+    }
+ }
+
+
+
+ /* .lessons .col {
+width: 100%;
+justify-content: center;
+
+
+.row {
+display: flex;
+flex-direction: column;
+justify-content: center; */
